--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -7,15 +7,16 @@
 </head>
 <body>
 <h1>Add User</h1>
-<form th:action="@{/saveUser}" th:object="${user}" th:method="post">
+<form th:action="@{saveUser}" th:object="${user}" th:method="post">
     <div>
-        <label for="name">UserName:</label>
+        <label for="username">Login:</label>
         <input type="text" id="username" th:field="*{username}" required>
     </div>
     <div>
-        <label for="name">Password:</label>
+        <label for="password">Password:</label>
         <input type="text" id="password" th:field="*{password}" required>
     </div>
+
     <div>
         <label for="name">FirstName:</label>
         <input type="text" id="name" th:field="*{firstName}" required>
@@ -25,7 +26,7 @@
         <input type="text" id="surname" th:field="*{lastName}" required>
     </div>
     <div>
-        <label for="email">Email:</label>
+        <label for="email">email:</label>
         <input type="email" id="email" th:field="*{email}" required>
     </div>
 
