--- a/src/main/resources/templates/admin/updateuser.html
+++ b/src/main/resources/templates/admin/updateuser.html
@@ -21,8 +21,12 @@
         <input type="email" id="email" th:field="*{email}" required>
     </div>
     <div>
-        <label for="role">Role:</label>
-        <input type="role" id="role" th:field="*{roles}" required>
+      <label for="password">PASSWORD:</label>
+        <input type="text" id="password" th:field="*{password}" required>
+    </div>
+    <div>
+        <label for="role">ROLE:</label>
+        <input type="text" id="role" th:field="*{roles}" required>
     </div>
 
     <button type="submit">Update</button>
